--- a/skip.html
+++ b/skip.html
@@ -7,12 +7,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"><!-- 适配手机 -->
 		<link rel="icon" type="image/x-icon" href="img/logo/favicon.ico"><!-- logo -->
 		<link rel="stylesheet" href="css/bgstyle.css"/>
-		<link rel="stylesheet" href="css/inputstyle.css"/>
+		<link rel="stylesheet" href="css/register.css"/>
 	</head>
 	
 	<body>
 		<div id="bg1" class="bgbox"></div>
 		<div id="bg2" class="bgbox"></div>
+		<div id="bg3" class="bgbox"></div>
 	</body>
 	
 </html>
