--- a/index.html
+++ b/index.html
@@ -28,28 +28,33 @@
 	</head>
 	
 	<body>
+		<div class="box-one">
 		<div class="index"></div>
 			<input type="checkbox" id="display">
-			<label for="display" class="header">登录</label>
+			<label for="display" id="buttonstyle" class="header">登录</label>
+			<input type="checkbox" id="GenshinImpact" onclick="location.href='GenshinImpact.html'">
+			<label for="GenshinImpact" id="buttonstyle" class="Genshin-Impact">原神</label>
 			<div id="time" align="center"></div>
 			<div id="bg1" class="bgbox"></div>
 			<div id="bg2" class="bgbox"></div>
 			<div id="bg3" class="bgbox"></div>
 			<div class="box">
-			<div class="wz">
+			<div class="loginform">
 				<form action="#" class="register"><!-- 登录表单 -->
 					<label for="display" class="skip">&times;</label>
 					<h2>🎧鱼妄妄</h2>
 					<br />
-					<input  type="text" name="username" placeholder="用户名"/>
+					<input 	type="text" name="username" placeholder="用户名"/>
 					<input  type="password" name="password " placeholder="密码"/>
-					<button class="#">登录</button>
+					<input type="checkbox" id="GenshinImpact-f" onclick="location.href='GenshinImpact.html'">
+					<label for="GenshinImpact-f" class="logon">登录</label>
 					<span>
-						<a href="#" class="sign-up">注册</a>
-						<a href="#" class="forgot">忘记密码？</a>
+						<a href="" class="sign-up">注册</a>
+						<a href="" class="forgot">忘记密码？</a>
 					</span>
 				</form>
 			</div>
+		</div>
 		</div>
 		<footer>鱼妄妄</footer>
 	</body>
