--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"><!-- 适配手机 -->
 		<link rel="icon" type="image/x-icon" href="img/logo/favicon.ico"><!-- logo -->
 		<link rel="stylesheet" href="css/bgstyle.css">
-		<link rel="stylesheet" href="css/register.css"/>
+		<link rel="stylesheet" href="css/register.css">
+		<link rel="stylesheet" href="css/buttonstyle.css">
 		<script type="text/javascript">//.时间
 			window.onload=function(){
 				window.requestAnimationFrame(getDate)
@@ -40,8 +41,8 @@
 			<div id="bg3" class="bgbox"></div>
 			<div class="box">
 			<div class="loginform">
-				<form action="#" class="register"><!-- 登录表单 -->
-					<label for="display" class="skip">&times;</label>
+				<form action="#" class="register"><!-- 登录 -->
+					<label for="display" class="exit">&times;</label>
 					<h2>🎧鱼妄妄</h2>
 					<br />
 					<input 	type="text" name="username" placeholder="用户名"/>
